# WorkForcePlanner

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  Schedule.py  app.py  config.yaml  docker-compose.yml  docker-manage.bat  docker-manage.sh  docker-publish.bat  main.py  pyproject.toml  requirements.txt  workers.yaml
pages/: 2_Workforce.py  3_Fields.py  3_Model.py  4_Model.py  4_Settings.py  5_Settings.py
src/: app_state.py  config.py  plot.py  ui_components.py  utils.py  worker.py  workforce.py
src/data/: __init__.py  base.py  gsheets.py
src/fields/: field.py  field_collection.py
src/model/: __init__.py  base.py  linear_regression.py  random_forest.py
src/planner/: fields.py  scheduler.py
src/worker/: __init__.py  worker.py  workforce.py
