[project]
name = "workforceplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "matplotlib>=3.10.3",
    "pandera[pandas]>=0.24.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
]
